# difference_detection

./: CMakeLists.txt  FRICP.h  README.md  io_pc.h  main.cpp
cmake/: FindEigen3.cmake
data/: 000000.pcd  000001.pcd
data/res/: m1reg_pc.ply  m1trans.txt  m3reg_pc.pcd  m3trans.txt
